--- a/src/components/Chat/Message/Message.css
+++ b/src/components/Chat/Message/Message.css
@@ -6,12 +6,14 @@
   border-radius: 10px;
   background-color: #ffffff;
   margin-bottom: 30px;
-  display: flex;
 }
 
 .message__timestamp {
   margin-left: 10px;
+  margin-top: 5px;
   font-size: xx-small;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .message__name {
