--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -50,9 +50,10 @@
 .chat__footer > form > input {
   flex: 1;
   border-radius: 30px;
-  padding: 10px;
+  padding: 10px 15px;
   border: none;
   outline-width: 0;
+  margin: 0 10px;
 }
 
 .chat__footer > form > button {
